--- a/css/style.css
+++ b/css/style.css
@@ -112,11 +112,6 @@
     line-height: 22px;
 }
 
-._me_photo {
-    background-image: url('../img/my_photo.jpg');
-
-}
-
 .menu_language {
     display: grid;
     grid-auto-flow: column;
@@ -260,4 +255,46 @@
 /*Skills ends*/
 
 /*Portfolio starts*/
-/**/
+.portfolio{
+    background-color: #f6f6f6;
+}
+.portfolio_wrapper {
+
+}
+
+.portfolio_projects {
+    display: grid;
+    grid-auto-flow: row;
+    justify-content: center;
+}
+
+.portfolio_item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    overflow: hidden;
+}
+
+.portfolio_name {
+    color: #070707;
+    margin-top: 45px;
+    margin-bottom: 100px;
+    text-decoration: none;
+}
+
+.portfolio_name:hover {
+    text-decoration: underline;
+    transition: all .2s ease;
+}
+
+.portfolio_name_text {
+    font-family: 'Gilroy',sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 22px;
+    text-align: center;
+    color: #070707;
+}
+/*Portfolio ends*/
+
